# mjackets-api

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32F769NI.ld
.github/ISSUE_TEMPLATE/: bug_report.md  hardware-support.md  rfc-proposal.md
.github/workflows/: main.yml
API/: CMakeLists.txt
API/c/: CMakeLists.txt
API/c/Inc/: analog_in.h  digital_in.h  digital_out.h  pin_common.h
API/cpp/: CMakeLists.txt
API/cpp/Inc/: AnalogIn.hpp  DigitalIn.hpp  DigitalOut.hpp  PinDefs.hpp  mJackets.hpp  mtrain.hpp
API/inc/: DigitalIn.hpp  DigitalOut.hpp  PinCommon.hpp  mJackets.hpp
HAL/: CMakeLists.txt
LIB/: CMakeLists.txt
LIB/FreeRTOS/: CMakeLists.txt
LIB/STM32_USB_Device_Library/: CMakeLists.txt
TEMPLATE/: CMakeLists.txt  main.cpp  readme.md
TEMPLATE/bsp/: CMakeLists.txt
TEMPLATE/bsp/config/: PinDefs.hpp
TEMPLATE/bsp/inc/: PinDefs.hpp  bsp.h
TEMPLATE/bsp/src/: bsp.c  default_handlers.c  interrupt_handlers.c  stm32f4xx_hal_msp.c
TEMPLATE/cmake/: arm-none-eabi.cmake  gcc_stm32.cmake  gcc_stm32f4.cmake
TEST/c/: CMakeLists.txt
TEST/cpp/: CMakeLists.txt  spi.cpp
api/: AnalogIn.cpp  ClockHandler.cpp  Delay.cpp  DigitalIn.cpp  DigitalOut.cpp  ExternalInterrupt.cpp  InterruptIn.cpp  SPI.cpp  default_handlers.c  delay.c  hardware_init.c  interrupt_handlers.c
boards/RoboJackets/mTrain/: CMakeLists.txt
boards/RoboJackets/mTrain/include/: PinDefs.hpp  board_init.h  stm32f7xx_hal_conf.h
boards/RoboJackets/mTrain/source/: STM32F769NI.ld  Startup.s  board_init.c
ci/build_scripts/: example.sh
ci/dockerfiles/mjackets-build/: Dockerfile  requirements.txt
ci/pipelines/docker-build/: pipeline.yml
ci/pipelines/mjackets-build/: pipeline.yml
cmake/: FindBOARD.cmake  FindBoard.cmake  FindCMSIS.cmake  FindHAL.cmake  stm32-gcc-arm-none-eabi.cmake
cmake/stm32/: common.cmake  devices.cmake  f1.cmake  f4.cmake  f7.cmake  linker_ld.cmake  utilities.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  README.rst  conf.py  index.rst
docs/api_reference/: AnalogIn.rst  Delay.rst  DigitalIn.rst  DigitalOut.rst  ExternalInterrupt.rst  Miscellaneous.rst  index.rst  mJackets.rst
docs/build_system/: CMakeDetails.rst
docs/contributing/: api_contributing.rst  api_development.rst  boilerplate_template.txt  commit_guidelines.rst  custom_boards.rst  index.rst  workflow.rst
docs/debugging/: index.rst
docs/development_process/: api_lifecycle.rst  code_flow.rst  dev_env_and_tools.rst  feature_tracking.rst  index.rst
docs/flashing/: index.rst
docs/getting_started/: index.rst
include/: AnalogIn.hpp  ClockHandler.hpp  Delay.hpp  DigitalIn.hpp  DigitalOut.hpp  ExternalInterrupt.hpp  I2C.hpp  InterruptIn.hpp  SPI.hpp  default_handlers.h  hardware_init.h  mJackets.hpp
template/: .gitmodules  CMakeLists.txt  main.cpp  readme.md
template/bsp/: CMakeLists.txt
template/bsp/inc/: stm32f4xx_hal_conf.h
tests/: CMakeLists.txt  blink.cpp  blink_interrupt.cpp  blinky.cpp  flash.c  gpio.cpp  spi.cpp  us_delay.c
tests/cpp/: usb_serial.cpp
utilities/: arch-packages.txt  arch-setup  flash.py  install  osx-packages.txt  osx-setup  requirements3.txt  ubuntu-packages.txt
